--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,10 +3,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     tools:context=".MainActivity">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="11111" />
+
     <com.zwl.cspinner.CSpinnerTextView
+        android:layout_marginRight="10dp"
         android:id="@+id/spinner_textvre"
         android:layout_width="200dp"
         android:layout_height="40dp"
