--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,23 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_marginBottom="80dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="11111" />
+        android:orientation="horizontal">
 
-    <com.zwl.cspinner.CSpinnerTextView
-        android:layout_marginRight="10dp"
-        android:id="@+id/spinner_textvre"
-        android:layout_width="200dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="30dp"
-        android:background="#efefef"
-        android:gravity="center_vertical"
-        android:paddingLeft="10dp" />
-</LinearLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="11111" />
+
+        <com.zwl.cspinner.CSpinnerTextView
+            android:id="@+id/spinner_textvre"
+            android:layout_width="200dp"
+            android:layout_height="40dp"
+            android:layout_marginRight="10dp"
+            android:background="#efefef"
+            android:gravity="center_vertical"
+            android:paddingLeft="40dp" />
+    </LinearLayout>
+</RelativeLayout>
